...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <ImageButton
            android:id="@+id/userItemBtnFavorite"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
            android:contentDescription="no"
            app:layout_constraintBottom_toBottomOf="parent"
...
